src/test/fun-test/semantic/DeclarationStrictConversion.java.err
Semantic error: type mismatch - expected SHORT, got INT, line 4, pos 21
