src/test/fun-test/semantic/DeclarationStrictConversion.java
class Main {
    void main() {
        int foo = 0;
        short bar = foo;
    }
}